multi: return more info for addresses, fix bugs
